--- a/Lab5BigPig/Lab5BigPig.csproj
+++ b/Lab5BigPig/Lab5BigPig.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameActivity.cs" />
     <Compile Include="GameLogic.cs" />
     <Compile Include="IntroFrag.cs" />
     <Compile Include="MainActivity.cs" />
